...
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textAlignment="center"
                    android:text="@string/toolbar_heading" />

                <EditText
                    android:id="@+id/customSearch"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints=""
                    android:background="@drawable/search_bar_background"
                    android:drawableEnd="@drawable/search_btn"
                    android:focusable="false"
...
