...
                    <include layout="@layout/placeholder_users_layout" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/user_row" />

            <LinearLayout
                android:layout_width="match_parent"
...
